fixed the extra whitespace between the top border and input box

--- a/src/output.css
+++ b/src/output.css
@@ -820,6 +820,10 @@ body {
   margin-top: -1em;
 }
 
+.comments-section > .form-component {
+  padding-top: 1em;
+}
+
 .comment {
   position: relative;
   border-bottom: 1px solid #eee;
